# Lore

./: README.md
client/: package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/assets/fonts/: fonts.css
client/src/components/: FormModal.jsx  TemplateFormModal.jsx  TemplatesModal.jsx  UserModal.jsx
client/src/contexts/: AuthContext.jsx  NotesApi.jsx  PatternApi.jsx  api.jsx  exception.js
client/src/pages/: DashBoardPage.jsx  LoginPage.jsx  ProjectPage.jsx  RegisterPage.jsx
server/: .env  .env.example  pyproject.toml  run.py
server/src/: database.py  exception.py  init_db.py  main.py
server/src/note/: model.py  repository.py  service.py  view.py
server/src/pattern/: model.py  repository.py  service.py  view.py
server/src/project/: model.py  repository.py  service.py  view.py
server/src/token/: model.py  service.py
server/src/user/: model.py  repository.py  service.py  view.py
