[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt==4.0.1",
    "datetime>=5.5",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib==1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "typer[all]>=0.20.0",
    "uvicorn[standard]>=0.35.0",
]
